New Product field added

--- a/consumer/pom.xml
+++ b/consumer/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>io.pact.workshop</groupId>
 	<artifactId>product-catalogue</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>product-catalogue</name>
 	<description>Product Catalogue service for Pact Workshop</description>
 
@@ -97,7 +97,7 @@
 				<artifactId>maven</artifactId>
 				<version>4.1.17</version>
 				<configuration>
-					<pactBrokerUrl>http://localhost:9292</pactBrokerUrl>
+					<pactBrokerUrl>http://localhost:3292</pactBrokerUrl>
 					<pactBrokerUsername>pact_workshop</pactBrokerUsername>
 					<pactBrokerPassword>pact_workshop</pactBrokerPassword>
 					<tags>
