--- a/provider/pom.xml
+++ b/provider/pom.xml
@@ -11,7 +11,7 @@
     </parent>
     <groupId>io.pact.workshop</groupId>
     <artifactId>product-service</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <description>Product Service for Pact Workshop</description>
 
     <properties>
