--- a/consumer/pom.xml
+++ b/consumer/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>io.pact.workshop</groupId>
 	<artifactId>product-catalogue</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.2-SNAPSHOT</version>
 	<name>product-catalogue</name>
 	<description>Product Catalogue service for Pact Workshop</description>
 
